--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <form class="form-floating">
             <div class="row">
                 <div class="col form-floating">
-                    <input type="number" class="py-input form-control mb-1" id="input-width" value="70" py-onKeyDown="run_reflow()>
+                    <input type="number" class="py-input form-control mb-1" id="input-width" value="70" py-onClick="run_reflow()>
                     <label for="input-width">Width</label>
                 </div>
                 <div class="col form-floating">
-                    <input type="number" class="py-input form-control mb-1" id="input-indent" value="4" py-onKeyDown="run_reflow()>
+                    <input type="number" class="py-input form-control mb-1" id="input-indent" value="4" py-onClick="run_reflow()>
                     <label for="input-indent">Indentation</label>
                 </div>
                 <div class="col form-floating">
-                    <input type="text" class="py-input form-control mb-1" id="input-comment" value="" py-onKeyDown="run_reflow()>
+                    <input type="text" class="py-input form-control mb-1" id="input-comment" value="" py-onClick="run_reflow()>
                     <label for="input-comment">Comment Chars</label>
                 </div>
             </div>
