--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         def run_reflow():
             content = Element("input-text").element.value
+            print(content)
             width = int(Element("input-width").element.value)
             indent = int(Element("input-indent").element.value)
             comments = Element("input-comment").element.value
@@ -30,19 +31,25 @@
     <div class="col-lg-6 mx-auto p-4 py-md-5">
         <h1>Text Reflow - PyScript</h1>
         <p>This app will take any text included in the textbox below, and wrap it to the provided width and indentation. It was created to help with formatting python docstrings so that descriptive text could be written normally, and then pasted into here before being put into a function.</p>
-        <form class="form-floating">
+        <form>
             <div class="row">
-                <div class="col form-floating">
-                    <input type="number" class="py-input form-control mb-1" id="input-width" value="70" py-onClick="run_reflow()>
-                    <label for="input-width">Width</label>
+                <div class="col">
+                    <div class="form-floating">
+                        <input type="number" class="py-input form-control mb-1" id="input-width" value="70" py-onclick="run_reflow()">
+                        <label for="input-width">Width</label>
+                    </div>  
                 </div>
-                <div class="col form-floating">
-                    <input type="number" class="py-input form-control mb-1" id="input-indent" value="4" py-onClick="run_reflow()>
-                    <label for="input-indent">Indentation</label>
+                <div class="col">
+                    <div class="form-floating">
+                        <input type="number" class="py-input form-control mb-1" id="input-indent" value="4" py-onclick="run_reflow()">
+                        <label for="input-indent">Indentation</label>
+                    </div>
                 </div>
-                <div class="col form-floating">
-                    <input type="text" class="py-input form-control mb-1" id="input-comment" value="" py-onClick="run_reflow()>
-                    <label for="input-comment">Comment Chars</label>
+                <div class="col">
+                    <div class="form-floating">
+                        <input type="text" class="py-input form-control mb-1" id="input-comment" value="" py-onclick="run_reflow()">
+                        <label for="input-comment">Comment Chars</label>
+                    </div>
                 </div>
             </div>
             <div>
@@ -60,7 +67,7 @@
                 <pre><code id="display-write"></code></pre>
             </div>
         </div>
-        <footer class="footer mt-5 py-5 ">
+        <footer class="footer mt-5 py-5">
             <div class="col-lg-6">
                 <span class="text-muted">Made by <a href="https://github.com/pmbaumgartner">@pmbaumgartner</a> with <a href="https://docs.pyscript.net/">PyScript</a>. <a href="https://github.com/pmbaumgartner/text-reflow-pyscript">Source</a>.</span>
             </div>
