--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
         def run_reflow():
             content = Element("input-text").element.value
-            print(content)
             width = int(Element("input-width").element.value)
             indent = int(Element("input-indent").element.value)
             comments = Element("input-comment").element.value
@@ -54,7 +53,7 @@
             </div>
             <div>
                 <label for="input-text" class="form-label">Input Text</label>
-                <textarea id="input-text" class="py-input mb-3 form-control" style="height: 100px; width: 100%" placeholder="Paste text here" py-onKeyDown="run_reflow()"></textarea>
+                <textarea id="input-text" class="py-input mb-3 form-control" style="height: 100px; width: 100%" placeholder="Paste text here" py-keydown="run_reflow()"></textarea>
                 <div id="input-text-help" class="form-text">
                     If you paste text and nothing happens, try pressing enter. This function is set to trigger on key down.
                 </div>
