--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <label for="input-text" class="form-label">Input Text</label>
                 <textarea id="input-text" class="py-input mb-3 form-control" style="height: 100px; width: 100%" placeholder="Paste text here" py-keydown="run_reflow()"></textarea>
                 <div id="input-text-help" class="form-text">
-                    If you paste text and nothing happens, try pressing enter. This function is set to trigger on key down.
+                    If you paste text and the output is not updated correctly, try pressing enter or clicking on an input field. This function is set to trigger on key down or click on input..
                 </div>
             </div>    
         </form>
